# sublime-music

./: .editorconfig  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.rst  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.rst  Pipfile  README.rst  all-requirements.txt  create-pypirc.sh  dev-requirements.txt  flake.nix  go.mod  go.sum  main.go  meson.build  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  shell.nix  sublime-music.desktop  sublime-music.metainfo.xml  wails.json
.builds/: build-flatpak.yml  build.yml  flatpak.yml  gitlab-mirror-and-readme.yml  lint-test.yml  publish.yml  pypi.yml  readme.yml
.github/: FUNDING.yml
.github/workflows/: deploy.yaml  flake.yaml  pages.yaml
.vim/: coc-settings.json  settings.json
api_object_generator/: api_object_generator.py
api_object_generator/api_specs/: subsonic-rest-api-1.14.0.xsd  subsonic-rest-api-1.16.1.xsd
cicd/: create-pypirc.sh  custom_style_check.py  install-project-deps.sh  license-scanning-setup.sh  no_print.sh  pages-build.sh  publish-gitlab-release.sh  pytest.sh  run_if_tagged_with_version  snapcraft.sh  start-dbus.sh  tagged_with_version
cicd/flatpak-build/: Dockerfile
cicd/python-build/: Dockerfile  install-python.sh
docs/: Makefile  adapter-api.rst  conf.py  index.rst  screenshots.rst  settings.rst
docs/logo/: Makefile
docs/manpages/: sublime-music.rst
flatpak/: .gitignore  Dockerfile  app.sublimemusic.SublimeMusic.json  com.sumnerevans.SublimeMusic.json  com.sumnerevans.libremsonic.json  flatpak-requirements.txt  flatpak_build.sh  python3-wheel.json
frontend/wailsjs/go/app/: App.d.ts  App.js
internal/app/: app.go  initial.go
internal/components/: index.templ  main.templ  unconfigured.templ
internal/static/: css.gen.go  fonts.gen.go  generator.go  js.gen.go  static.go
libremsonic/: __main__.py  app.py  cache_manager.py  config.py  dbus_manager.py  from_json.py  state_manager.py
libremsonic/server/: __init__.py  api_object.py  api_objects.py  server.py
libremsonic/ui/: __init__.py  albums.py  app.py  app_styles.css  artists.py  configure_servers.py  main.py  more.py  player_controls.py  playlists.py  settings.py  util.py
libremsonic/ui/common/: __init__.py  album_with_songs.py  cover_art_grid.py  edit_form_dialog.py  icon_button.py  players.py  spinner_image.py
logo/: Makefile
pkg/subsonic/: albumsonglists.go  bookmarks.go  browsing.go  chat.go  client.go  client_test.go  doc.go  duration.go  error.go  id.go  ignoredarticles.go  internetradio.go  jukebox.go  mediaannotation.go  medialibraryscanning.go  mediaretrieval.go  objects.go  playlist.go  playlists.go  podcasts.go  response.go  searching.go  sharing.go  song.go  system.go  usermanagement.go  util.go  values.go  values_test.go
pkg/wailszlog/: logger.go
snap/: snapcraft.yaml
src/: main.vala
src/libremsonic/: client_ui.vala  server.vala
sublime/: __main__.py  app.py  cache_manager.py  config.py  dbus_manager.py  from_json.py  players.py  state_manager.py  util.py
sublime/adapters/: __init__.py  adapter_base.py  adapter_manager.py  api_objects.py  configure_server_form.py  manager.py
sublime/adapters/filesystem/: __init__.py  adapter.py  database.py  models.py  sqlite_extensions.py
sublime/adapters/subsonic/: __init__.py  adapter.py  api_objects.py
sublime/adapters/subsonic/api_specs/: subsonic-rest-api-1.1.0.xsd  subsonic-rest-api-1.1.1.xsd  subsonic-rest-api-1.11.0.xsd  subsonic-rest-api-1.13.0.xsd  subsonic-rest-api-1.5.0.xsd  subsonic-rest-api-1.6.0.xsd
sublime/database/: tables.py
sublime/dbus/: __init__.py  manager.py
sublime/players/: base.py  chromecast.py  manager.py  mpv.py  players.py
sublime/server/: __init__.py  api_object.py  api_objects.py  server.py
sublime/ui/: albums.py  app_styles.css  artists.py  browse.py  configure_provider.py  configure_servers.py  main.py  player_controls.py  playlists.py  settings.py  state.py  util.py
sublime/ui/common/: __init__.py  album_with_songs.py  cover_art_grid.py  edit_form_dialog.py  icon_button.py  load_error.py  players.py  song_list_column.py  spinner_image.py
sublime_music/: __init__.py  __main__.py  app.py  config.py  util.py
sublime_music/adapters/: __init__.py  adapter_base.py  api_objects.py  configure_server_form.py  manager.py
sublime_music/adapters/filesystem/: adapter.py  models.py  sqlite_extensions.py
sublime_music/adapters/subsonic/: adapter.py  api_objects.py
sublime_music/dbus/: __init__.py  manager.py
sublime_music/dbus/mpris_specs/: org.mpris.MediaPlayer2.Playlists.xml
sublime_music/players/: __init__.py  base.py  chromecast.py  manager.py  mpv.py
sublime_music/ui/: albums.py  app_styles.css  artists.py  browse.py  configure_provider.py  main.py  player_controls.py  playlists.py  state.py  util.py
sublime_music/ui/common/: __init__.py  album_with_songs.py  icon_button.py  load_error.py  rating_button.py  song_list_column.py  spinner_image.py
tests/: common_ui_tests.py  config_test.py
tests/adapter_tests/: adapter_api_object_tests.py  adapter_base_tests.py  adapter_manager_tests.py  filesystem_adapter_tests.py  sublime_adapter_tests.py  subsonic_adapter_tests.py
tests/adapter_tests/mock_data/: README  create_playlist-airsonic.json  create_playlist-navidrome.json  get_album-airsonic.json  get_artist-airsonic.json  get_artist-gonic.json  get_artist_good_image_url-.json  get_artists-airsonic.json  get_artists-revel.json  get_artists-supysonic.json  get_genres-airsonic.json  get_indexes-airsonic.json  get_music_directory-subdir.json  get_play_queue-airsonic.json  get_playlist_details-airsonic.json  get_playlist_details-navidrome.json  get_playlists-airsonic.json  get_song_details-airsonic.json  get_song_details_no_albumid-airsonic.json  get_song_details_no_artistid-airsonic.json  ping_failed-.json  ping_failed-404.html  search3-airsonic.json  search3-navidrome.json  update_playlist-airsonic.json
tests/mock_data/: config-v5.json
tests/player_tests/: chromecast_tests.py  mpv_tests.py
ui/: meson.build
ui/src/: main.vala
(+22 files in other folders)
