[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sublime_music"
authors = [
    {name = "Sumner Evans", email = "inquiries@sumnerevans.com"}
]
dynamic = ["version", "description"]
readme = "README.rst"
requires-python = ">=3.8,<4"
license = {file = "LICENSE"}
keywords = ["airsonic", "music", "GTK", "chromecast", "subsonic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]

dependencies = [
    "bleach",
    "dataclasses-json",
    "deepdiff",
    "thefuzz",
    "peewee",
    "PyGObject",
    "python-dateutil",
    "python-Levenshtein",
    "python-mpv",
    "requests",
    "semver",
]

[project.optional-dependencies]
dev = [
    "black",
    "docutils <0.17",
    "flake8",
    "flake8-annotations",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-import-order",
    "flake8-pep3101",
    "flake8-print",
    "flit",
    "mypy",
    "pip-tools",
    "pre-commit",
    "pytest-cov",
    "requirements-parser",
    "rst2html5",
    "sphinx <5",
    "sphinx_rtd_theme",
    "termcolor",
]
chromecast = ["pychromecast"]
keyring = ["keyring"]
server = ["bottle"]

[project.urls]
Homepage = "https://sublimemusic.app"
"Source Code" = "https://github.com/sublime-music/sublime-music"
Documentation = "https://sublime-music.gitlab.io/sublime-music"
"Bug Tracker" = "https://github.com/sublime-music/sublime-music/issues"

[project.scripts]
sublime-music = 'sublime_music.__main__:main'
