[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sublime_music"
authors = [
    {name = "Sumner Evans", email = "inquiries@sumnerevans.com"}
]
dynamic = ["version", "description"]
readme = "README.rst"
requires-python = ">=3.10,<4"
license = {file = "LICENSE"}
keywords = ["airsonic", "music", "GTK", "chromecast", "subsonic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

dependencies = [
    "bleach",
    "dataclasses-json",
    "deepdiff",
    "thefuzz",
    "peewee",
    "PyGObject",
    "python-dateutil",
    "python-mpv",
    "requests",
    "semver",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-annotations",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-pep3101",
    "flake8-print",
    "flit",
    "isort",
    "mypy",
    "pip-tools",
    "pre-commit",
    "requirements-parser",
    "termcolor",
    "thefuzz @ git+https://github.com/seatgeek/thefuzz@6e68af84e086b3e5f7253d4f9b0d6c7313e34637",
    "types-bleach",
    "types-peewee",
    "types-python-dateutil",
    "types-pyyaml",
    "types-requests",
    "types-tabulate",
    "types-termcolor",
]
doc = [
    "docutils <0.17",
    "rst2html5",
    "sphinx <5",
    "sphinx_rtd_theme",
]
test = [
    "pytest",
    "pytest-cov",
]
chromecast = ["pychromecast"]
keyring = ["keyring"]
server = ["bottle"]

[project.urls]
Homepage = "https://sublimemusic.app"
Documentation = "https://docs.sublimemusic.app"
"Source Code" = "https://github.com/sublime-music/sublime-music"
"Bug Tracker" = "https://github.com/sublime-music/sublime-music/issues"

[project.scripts]
sublime-music = 'sublime_music.__main__:main'

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = "sublime_music"
line_length = 99

[tool.black]
line-length = 99
target-version = ["py38"]
