[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sublime_music"
authors = [
    {name = "Sumner Evans", email = "inquiries@sumnerevans.com"}
]
dynamic = ["version", "description"]
readme = "README.rst"
requires-python = ">=3.10,<4"
license = {file = "LICENSE"}
keywords = ["airsonic", "music", "GTK", "chromecast", "subsonic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

dependencies = [
    "bleach",
    "bottle",
    "dataclasses-json",
    "deepdiff",
    "Levenshtein",
    "peewee",
    "pychromecast",
    "PyGObject",
    "python-dateutil",
    "python-mpv",
    "requests",
    "semver",
    "thefuzz",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-annotations",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-pep3101",
    "flake8-print",
    "flit",
    "isort",
    "mypy",
    "pip-tools",
    "pre-commit",
    "requirements-parser",
    "termcolor",
    "types-bleach",
    "types-peewee",
    "types-python-dateutil",
    "types-pyyaml",
    "types-requests",
    "types-tabulate",
    "types-termcolor",
]
doc = [
    "docutils <0.17",
    "rst2html5",
    "sphinx <5",
    "sphinx_rtd_theme",
]
test = [
    "pytest",
    "pytest-cov",
]
keyring = ["keyring"]

[project.urls]
Homepage = "https://sublimemusic.app"
Documentation = "https://docs.sublimemusic.app"
"Source Code" = "https://github.com/sublime-music/sublime-music"
"Bug Tracker" = "https://github.com/sublime-music/sublime-music/issues"

[project.scripts]
sublime-music = 'sublime_music.__main__:main'

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = "sublime_music"
line_length = 99

[tool.black]
line-length = 99
target-version = ["py38"]
